--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PRIMARY_PATH = '/storage1/kaggle/audio-classifier/'\n",
+    "PRIMARY_PATH = 'PUT_PATH_TO_DATA'\n",
     "test_df = pd.read_csv(os.path.join(PRIMARY_PATH, 'sample_submission.csv'))"
    ]
   },
