--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import MeanShift, GaussianMixture\n",
+    "from sklearn.cluster import MeanShift\n",
+    "from sklearn.mixture import GaussianMixture\n",
     "from umap import UMAP\n",
     "import pandas as pd\n",
     "%matplotlib inline\n",
